--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -152,6 +152,9 @@
             <a href="/product/catalog?categoryType=Flowers" class="catalog-button">Цветы</a>
             <a href="/product/catalog?categoryType=Gifts" class="catalog-button">Подарки</a>
             <a href="/product/catalog?categoryType=Celebration" class="catalog-button">Праздники</a>
+            <form th:action="@{/order/cart}" method="get" sec:authorize="isAuthenticated()">
+                <button type="submit">Корзина</button>
+            </form>
         </nav>
 
     </header>
@@ -189,6 +192,12 @@
                             <form th:action="@{/product/{id}/details(id=${product.id})}" method="get">
                                 <input type="hidden" name="categoryType" th:value="${categoryType}">
                                 <button type="submit">Подробнее</button>
+                            </form>
+                            <form th:action="@{/order/cart/add}" method="post">
+                                <input type="hidden" name="productId" th:value="${product.id}">
+                                <input type="hidden" name="categoryType" th:value="${form.categoryType}">
+                                <input type="number" name="quantity" value="1" min="1" style="width: 50px;">
+                                <button type="submit">Добавить в корзину</button>
                             </form>
                         </div>
                     </th:block>
