--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -72,6 +72,9 @@
 
                     <button type="submit" class="btn btn-secondary">Register</button>
                 </form>
+                <form th:action="@{/users/login}" method="get" >
+                    <button type="submit">Login</button>
+                </form>
             </div>
         </div>
     </div>
