--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,9 @@
 
           <button type="submit" class="btn btn-secondary">Login</button>
         </form>
+        <form th:action="@{/users/register}" method="get" >
+          <button type="submit">Register</button>
+        </form>
       </div>
     </div>
   </div>
