--- a/src/main/resources/templates/ProductCreate.html
+++ b/src/main/resources/templates/ProductCreate.html
@@ -3,23 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>ProductCreate</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <h1>Создание товара</h1>
-        <div class="form-container">
+    <div class="container my-5">
+        <h1 class="mb-4">Создание товара</h1>
+        <div class="card p-4">
             <form action="/product/create" method="post" th:object="${form}">
-                <label for="name">Название:</label>
-                <input type="text" id="name" th:field="*{name}" required>
-                <label for="price">Цена:</label>
-                <input type="number" id="price" th:field="*{price}" required>
-                <label for="url">Ссылка на изображение:</label>
-                <input type="text" id="url" th:field="*{url}">
-                <label for="categoryID">Категория:</label>
-                <select id="categoryID" th:field="*{categoryID}" required>
-                    <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
-                </select>
-                <button type="submit">Создать</button>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Название:</label>
+                    <input type="text" id="name" th:field="*{name}" class="form-control" required>
+                    <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="price" class="form-label">Цена:</label>
+                    <input type="number" id="price" th:field="*{price}" class="form-control" required>
+                    <div th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="text-danger"></div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="url" class="form-label">Ссылка на изображение:</label>
+                    <input type="text" id="url" th:field="*{url}" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="quantityProduct" class="form-label">Количество:</label>
+                    <input type="text" id="quantityProduct" th:field="*{quantityProduct}" class="form-control">
+                    <div th:if="${#fields.hasErrors('quantityProduct')}" th:errors="*{quantityProduct}" class="text-danger"></div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="categoryID" class="form-label">Категория:</label>
+                    <select id="categoryID" th:field="*{categoryID}" class="form-select" required>
+                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+                    </select>
+                    <div th:if="${#fields.hasErrors('categoryID')}" th:errors="*{categoryID}" class="text-danger"></div>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Создать</button>
             </form>
         </div>
     </div>
