--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,83 +1,66 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
-<body class="d-flex flex-column h-100">
-<main class="flex-shrink-0">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="jumbotron text-center rounded col-md-8 align-self-center pt-5">
-                <div class="justify-content-center">
-                    <h1>Register</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+    <body class="d-flex flex-column h-100 bg-light">
+    <main class="flex-shrink-0">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4">
+                    <div class="card shadow-sm rounded-lg">
+                        <div class="card-body p-4">
+                            <h2 class="text-center mb-4">Register</h2>
+                            <form th:action="@{/users/register}" th:method="post" th:object="${userRegistrationDto}">
+
+                                <div class="mb-3">
+                                    <label class="form-label" for="username">Username</label>
+                                    <input th:field="*{username}" th:errorclass="is-invalid" type="text" class="form-control" id="username" name="username" required />
+                                    <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="invalid-feedback">Error message</div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label" for="email">Email</label>
+                                    <input th:field="*{email}" th:errorclass="is-invalid" type="email" class="form-control" id="email" name="email" required />
+                                    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="invalid-feedback">Error message</div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label" for="phoneNumber">Phone number</label>
+                                    <input th:field="*{phoneNumber}" th:errorclass="is-invalid" type="text" class="form-control" id="phoneNumber" name="phoneNumber" required />
+                                    <div th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="invalid-feedback">Phone number error</div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label" for="password">Password</label>
+                                    <input th:field="*{password}" minlength="5" maxlength="20" th:errorclass="is-invalid" type="password" class="form-control" id="password" name="password" required />
+                                    <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="invalid-feedback">Error message</div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label" for="confirmPassword">Confirm password</label>
+                                    <input th:field="*{confirmPassword}" minlength="5" maxlength="20" th:errorclass="is-invalid" type="password" class="form-control" id="confirmPassword" name="confirmPassword" required />
+                                    <div th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="invalid-feedback">Error message</div>
+                                </div>
+
+                                <button type="submit" class="btn btn-primary w-100">Register</button>
+                            </form>
+
+                            <div class="text-center mt-3">
+                                <form th:action="@{/users/login}" method="get">
+                                    <button type="submit" class="btn btn-link">Already have an account? Login</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <form th:action="@{/users/register}"
-                      th:method="post"
-                      th:object="${userRegistrationDto}"
-                      class="m-md-auto w-50 pb-3">
-                    <div class="mb-3">
-                        <label class="form-label" for="username">Username</label>
-                        <input th:field="*{username}"
-                               th:errorclass="is-invalid"
-                               type="text" class="form-control text-center" id="username" aria-describedby="usernameHelp"
-                               name="username"/>
-                        <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger">Error
-                            message</small>
-                    </div>
-
-                    <div class="mb-3">
-                        <label class="form-label" for="email">Email</label>
-                        <input th:field="*{email}"
-                               th:errorclass="is-invalid"
-                               type="email" class="form-control text-center"
-                               id="email" aria-describedby="email" name="email"/>
-                        <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-                               class="text-danger">Error
-                            message</small>
-                    </div>
-
-                    <div class="mb-3">
-                        <label class="form-label" for="phoneNumber">Phone number</label>
-                        <input th:field="*{phoneNumber}"
-                               th:errorclass="is-invalid"
-                               type="number" min="0" class="form-control text-center"
-                               id="phoneNumber" aria-describedby="phoneNumber" name="phoneNumber"/>
-                        <small th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"
-                               class="text-danger">Phone number</small>
-                    </div>
-
-                    <div class="mb-3">
-                        <label class="form-label" for="password">Password</label>
-                        <input th:field="*{password}"
-                               required minlength="5" maxlength="20"
-                               th:errorclass="is-invalid"
-                               type="password" min="0" class="form-control text-center"
-                               id="password" aria-describedby="password" name="password"/>
-                        <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-                               class="text-danger">Error
-                            message</small>
-                    </div>
-
-
-                    <div class="mb-3">
-                        <label class="form-label" for="confirmPassword">Confirm password</label>
-                        <input th:field="*{confirmPassword}"
-                               required minlength="5" maxlength="20"
-                               th:errorclass="is-invalid"
-                               type="password" min="0" class="form-control text-center"
-                               id="confirmPassword" aria-describedby="confirmPassword" name="confirmPassword"/>
-                        <small th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
-                               class="text-danger">Error
-                            message</small>
-                    </div>
-
-                    <button type="submit" class="btn btn-secondary">Register</button>
-                </form>
-                <form th:action="@{/users/login}" method="get" >
-                    <button type="submit">Login</button>
-                </form>
             </div>
         </div>
-    </div>
-</main>
-</body>
+    </main>
+    </body>
+
 </html>
